@@ -7,6 +7,7 @@
 	- Add JSON Merge Patch capability to mseh_set_ptr_r().
 	- Fix zero-padding of empty bytes following data in miniSEED v2 creation.
 	- Rename DE_ASCII to DE_TEXT to generalize to UTF-8, legacy mapping provided.
+	- Add MS3Tolerance_INITIALIZER for MS3Tolerance values.
 
 2023.155:
 	WARNING: API change as follows:
